<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/large_padding_16dp">
    <LinearLayout
        android:id="@+id/product_details_views"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/product_name_edit_text"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:hint="@string/product_name"
                android:layout_marginRight="@dimen/med_margin_8dp"
                />
            <EditText
                android:id="@+id/product_price_edit_text"
                android:layout_width="0dp"
                android:layout_weight="1.25"
                android:layout_height="wrap_content"
                android:hint="@string/price"/>
        </LinearLayout>
        <Spinner
            android:id="@+id/product_category_spinner"
            android:layout_width="match_parent"
            android:layout_height="@dimen/spinner_height_40dp"
            android:layout_marginTop="@dimen/med_margin_8dp"/>
    </LinearLayout>
    <LinearLayout
        app:layout_constraintTop_toBottomOf="@id/product_details_views"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="@dimen/med_margin_8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/small_padding_8dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceSmall"
                android:textStyle="bold"
                android:gravity="center_horizontal"
                android:text="@string/quantity"/>
            <Button
                android:id="@+id/increase_qty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/plus"/>
            <TextView
                android:id="@+id/product_quantity_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="@dimen/small_margin_4dp"
                android:layout_marginBottom="@dimen/small_margin_4dp"
                android:text="@string/zero"/>
            <Button
                android:id="@+id/decrease_qty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/minus"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="@dimen/large_margin_16dp"
            android:layout_width="0dp"
            android:layout_weight="2.5"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <Spinner
                android:id="@+id/product_supplier_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spinner_height_40dp"
                android:layout_marginLeft="@dimen/med_margin_8dp"
                android:layout_marginRight="@dimen/med_margin_8dp"/>
            <TextView
                android:id="@+id/product_supplier_phone"
                android:layout_marginTop="@dimen/med_margin_8dp"
                android:layout_marginLeft="@dimen/med_margin_8dp"
                android:layout_marginRight="@dimen/med_margin_8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/small_text_12sp"
                tools:text="@string/sony_phone"/>
            <TextView
                android:id="@+id/product_supplier_address"
                android:layout_margin="@dimen/med_margin_8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/small_text_12sp"
                tools:text="@string/sony_address"/>
        </LinearLayout>
    </LinearLayout>



</android.support.constraint.ConstraintLayout>